--- a/app/views/cost_types/_form.html.erb
+++ b/app/views/cost_types/_form.html.erb
@@ -11,17 +11,17 @@
     </div>
   <% end %>
 
-  <div class="my-5">
+  <div class="form-group">
     <%= form.label :name %>
-    <%= form.text_field :name, class: ["block shadow-sm rounded-md border px-3 py-2 mt-2 w-full", {"border-gray-400 focus:outline-blue-600": cost_type.errors[:name].none?, "border-red-400 focus:outline-red-600": cost_type.errors[:name].any?}] %>
+    <%= form.text_field :name, class: 'form-control' %>
   </div>
 
-  <div class="my-5">
+  <div class="form-group">
     <%= form.label :description %>
-    <%= form.text_area :description, rows: 4, class: ["block shadow-sm rounded-md border px-3 py-2 mt-2 w-full", {"border-gray-400 focus:outline-blue-600": cost_type.errors[:description].none?, "border-red-400 focus:outline-red-600": cost_type.errors[:description].any?}] %>
+    <%= form.text_area :description, rows: 4, class: 'form-control' %>
   </div>
 
-  <div class="inline">
-    <%= form.submit class: "w-full sm:w-auto rounded-md px-3.5 py-2.5 bg-blue-600 hover:bg-blue-500 text-white inline-block font-medium cursor-pointer" %>
+  <div class="form-group">
+    <%= form.submit "Salvar", class: "btn btn-primary" %>
   </div>
 <% end %>
