--- a/app/views/travels/_table_row.html.erb
+++ b/app/views/travels/_table_row.html.erb
@@ -1,7 +1,13 @@
 <h4 class="card-text"><%= travel.start_in %> - <%= travel.vehicle.name %></h4>
-<p class="card-text">Inicio em: <%= travel.created_at %></p>
+<p class="card-text">Inicio em: <%= l travel.created_at, format: :default %></p>
 
-<div class="flex">
-    <%= link_to "Editar", edit_travel_path(travel), class: "btn btn-info" %>
-    <%= button_to "Excluir", travel, method: :delete, class: "btn btn-danger mx-2", data: { turbo_confirm: "Are you sure?" } %>
-</div>
+<% if travel.end_at.present? %>
+  <div class="alert alert-success">
+    Viagem finalizada em: <strong><%= l travel.end_at, format: :default %></strong>
+  </div>
+<% else %>
+    <div class="flex">
+        <%= link_to "Editar", edit_travel_path(travel), class: "btn btn-info" %>
+        <%= button_to "Excluir", travel, method: :delete, class: "btn btn-danger mx-2", data: { turbo_confirm: "Are you sure?" } %>
+    </div>
+<% end %>
