--- a/app/views/travels/edit.html.erb
+++ b/app/views/travels/edit.html.erb
@@ -5,6 +5,21 @@
 
   <%= render "form", travel: @travel %>
 
-  <%= link_to "Show this travel", @travel, class: "w-full sm:w-auto text-center mt-2 sm:mt-0 sm:ml-2 rounded-md px-3.5 py-2.5 bg-gray-100 hover:bg-gray-50 inline-block font-medium" %>
-  <%= link_to "Back to travels", travels_path, class: "w-full sm:w-auto text-center mt-2 sm:mt-0 sm:ml-2 rounded-md px-3.5 py-2.5 bg-gray-100 hover:bg-gray-50 inline-block font-medium" %>
+  <%= link_to "voltar", travels_path %>
+</div>
+
+
+<div class="card">
+  <div class="card-header">
+    Custos
+  </div>
+  <div class="card-body">
+    <div class="mt-3">
+      <%= link_to "+ Add custo", new_cost_path(travel_id: @travel.id), class: "btn btn-success" %>
+
+      <div class="row mt-3">
+        <%= render 'costs/table_row_cost', costs: @travel.costs.only_deficit, credits: @travel.costs.only_credit %>
+      </div>
+    </div>
+  </div>
 </div>
