--- a/app/views/travels/index.html.erb
+++ b/app/views/travels/index.html.erb
@@ -11,27 +11,21 @@
   </div>
 
 
-<% if @travels.any? %>
-  <% @travels.each do |travel| %>
-    <div class="card mt-3">
-      <div class="card-header">
-        Viagem
-      </div>
-      <div class="card-body">
-        <div>
-          <%= render 'table_row', travel: travel %>
+<div class=" mb-5">
+  <% if @travels.any? %>
+    <% @travels.each do |travel| %>
+      <div class="card mt-3">
+        <div class="card-header">
+          Viagem
         </div>
-        <hr/>
-        <div class="mt-3">
-          <%= link_to "+ Add custo", new_cost_path(travel_id: travel.id), class: "btn btn-success" %>
-
-          <div class="row mt-3">
-            <%= render 'costs/table_row_cost', costs: travel.costs.only_deficit, credits: travel.costs.only_credit %>
+        <div class="card-body">
+          <div>
+            <%= render 'table_row', travel: travel %>
           </div>
         </div>
       </div>
-    </div>
+    <% end %>
+  <% else %>
+    <p class="text-center my-10">No travels found.</p>
   <% end %>
-<% else %>
-  <p class="text-center my-10">No travels found.</p>
-<% end %>
+</div>
