--- a/app/views/vehicles/_form.html.erb
+++ b/app/views/vehicles/_form.html.erb
@@ -13,26 +13,26 @@
 
   <div class="form-group">
     <%= form.label :company_id, style: "display: block" %>
-    <%= form.select :company_id, @companies.map{|company| [company.name, company.id]}, include_blank: 'Selecione', class: ["block shadow-sm rounded-md border px-3 py-2 mt-2 w-full", {"border-gray-400 focus:outline-blue-600": vehicle.errors[:name].none?, "border-red-400 focus:outline-red-600": vehicle.errors[:name].any?}] %>
+    <%= form.select :company_id, @companies.map{|company| [company.name, company.id]}, include_blank: 'Selecione', class: 'form-control' %>
   </div>
 
 
   <div class="form-group">
     <%= form.label :truck_id, style: "display: block" %>
-    <%= form.select :truck_id, @trucks.map{|truck| [truck.name, truck.id]}, include_blank: 'Selecione', class: ["block shadow-sm rounded-md border px-3 py-2 mt-2 w-full", {"border-gray-400 focus:outline-blue-600": vehicle.errors[:name].none?, "border-red-400 focus:outline-red-600": vehicle.errors[:name].any?}] %>
+    <%= form.select :truck_id, @trucks.map{|truck| [truck.name, truck.id]}, include_blank: 'Selecione', class: 'form-control' %>
   </div>
 
   <div class="my-5">
     <%= form.label :name %>
-    <%= form.text_field :name, class: ["block shadow-sm rounded-md border px-3 py-2 mt-2 w-full", {"border-gray-400 focus:outline-blue-600": vehicle.errors[:name].none?, "border-red-400 focus:outline-red-600": vehicle.errors[:name].any?}] %>
+    <%= form.text_field :name, class: 'form-control' %>
   </div>
 
   <div class="my-5">
     <%= form.label :description %>
-    <%= form.text_area :description, rows: 4, class: ["block shadow-sm rounded-md border px-3 py-2 mt-2 w-full", {"border-gray-400 focus:outline-blue-600": vehicle.errors[:description].none?, "border-red-400 focus:outline-red-600": vehicle.errors[:description].any?}] %>
+    <%= form.text_area :description, rows: 4, class: 'form-control' %>
   </div>
 
   <div class="inline">
-    <%= form.submit class: "w-full sm:w-auto rounded-md px-3.5 py-2.5 bg-blue-600 hover:bg-blue-500 text-white inline-block font-medium cursor-pointer" %>
+    <%= form.submit "Salvar", class: "btn btn-primary" %>
   </div>
 <% end %>
