--- a/app/views/travels/_table_row.html.erb
+++ b/app/views/travels/_table_row.html.erb
@@ -5,9 +5,11 @@
   <div class="alert alert-success">
     Viagem finalizada em: <strong><%= l travel.end_at, format: :default %></strong>
   </div>
-<% else %>
-    <div class="flex">
-        <%= link_to "Editar", edit_travel_path(travel), class: "btn btn-info" %>
-        <%= button_to "Excluir", travel, method: :delete, class: "btn btn-danger mx-2", data: { turbo_confirm: "Are you sure?" } %>
-    </div>
 <% end %>
+
+<div class="flex">
+    <%= link_to "Editar", edit_travel_path(travel), class: "btn btn-info" %>
+    <% if travel.end_at.blank? %>
+        <%= button_to "Excluir", travel, method: :delete, class: "btn btn-danger mx-2", data: { turbo_confirm: "Ao excluir, você também perderá todos os custos." } %>
+    <% end %>
+</div>
