--- a/app/views/costs/new.html.erb
+++ b/app/views/costs/new.html.erb
@@ -5,5 +5,5 @@
 
   <%= render "form", cost: @cost %>
 
-  <%= link_to "Back to costs", costs_path %>
+  <%= link_to "Back to costs", travels_path %>
 </div>
