--- a/app/views/travels/edit.html.erb
+++ b/app/views/travels/edit.html.erb
@@ -1,7 +1,7 @@
 <% content_for :title, "Editing travel" %>
 
 <div class="md:w-2/3 w-full">
-  <h1 class="font-bold text-4xl">Editing travel</h1>
+  <h1 class="font-bold text-4xl">Editar viagem</h1>
 
   <%= render "form", travel: @travel %>
 
@@ -15,8 +15,9 @@
   </div>
   <div class="card-body">
     <div class="mt-3">
-      <%= link_to "+ Add custo", new_cost_path(travel_id: @travel.id), class: "btn btn-success" %>
-
+      <% if @travel.end_at.blank? %>
+        <%= link_to "+ Add custo", new_cost_path(travel_id: @travel.id), class: "btn btn-success" %>
+      <% end %>
       <div class="row mt-3">
         <%= render 'costs/table_row_cost', costs: @travel.costs.only_deficit, credits: @travel.costs.only_credit %>
       </div>
